[package]
name = "SensESP-rs"
version = "0.1.0"
authors = ["Carl Middleton <dev@carlcodes.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[lib]
name = "sensesp"
path = "src/lib/lib.rs"

[[bin]]
name = "example"
path = "src/examples/main.rs"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]
pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
anyhow      = "=1.0.86"
esp-idf-svc = { version = "0.48.1", default-features = false }
log = { version = "0.4.22" }
toml-cfg    = "=0.1.3"
rgb         = "0.8.29"
bmp180-driver = "0.1.1"

[build-dependencies]
embuild = "0.31.3"
toml-cfg    = "=0.1.3"
