cargo-features = ["edition2024"]

[package]
name = "SensESP-rs"
version = "0.1.0"
authors = ["Carl Middleton <dev@carlcodes.com>"]
edition = "2024"
resolver = "2"
rust-version = "1.82"

[lib]
name = "sensesp"
path = "src/lib/lib.rs"

[[bin]]
name = "example"
path = "src/examples/main.rs"

[[bin]]
name = "scanner"
path = "src/examples/scanner.rs"

[[bin]]
name = "oled"
path = "src/examples/ssd1306-oled.rs"

[[bin]]
name = "oled-bus"
path = "src/examples/ssd1306-oled-bus.rs"

[[bin]]
name = "signalk"
path = "src/examples/signalk.rs"

[[bin]]
name = "constantsensor"
path = "src/examples/constant_sensor.rs"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]
pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
anyhow      = "1.0.93"
esp-idf-svc = { version = "0.49.1", default-features = false }
esp-idf-hal = "0.44.1"
log = { version = "0.4.22" }
toml-cfg    = "0.2.0"
rgb         = "0.8.29"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.2.0", features = ["std", "async"] }
embedded-svc = "0.28.0"
shared-bus = "0.3.1"
ssd1306 = "0.9.0"
display-interface = "0.5.0"
embedded-graphics = "0.8.1"
mpu6050 = "0.1.6"
eyeball = "0.7.0"
smol = "2.0.2"
signalk = "0.6.3"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"

[build-dependencies]
embuild = "0.32.0"
toml-cfg    = "=0.1.3"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp_websocket_client", version = "1.1.0" }
